# PlasmaDXR

./: .clangd  .git_commit_template_probe_grid.txt  .gitattributes  .gitignore  121025_UNRECOVERABLE SESSION.MD  2025-11-12-this-session-is-being-continued-from-a-previous-co.txt  300_UNIT_BOUNDARY_SOLUTION.md  ADAPTIVE_QUALITY_IMPLEMENTATION.md  ADAPTIVE_RADIUS_BLAS_FIX.md  ADAPTIVE_RADIUS_FIX.md  ADAPTIVE_RADIUS_IMGUI_FREEZE_FIX.md  ADAPTIVE_RADIUS_TDR_FIX.md  ADVANCED_SHADOW_SYSTEM_DESIGN.md  AGENTS.md  AGENT_M_INCREMENT_ANALYSIS.md  AGENT_WEIGHT_ANALYSIS.md  AGENT_WORKFLOW_PROPOSAL.md  ANIMATION_SCENARIOS.md  BALANCED_GI_IMPLEMENTATION_PLAN.md  BATCHING_CRASH_DIAGNOSIS.md  BATCHING_FUNDAMENTAL_FLAW.md  BATCHING_IMPLEMENTATION_COMPLETE.md  BATCHING_NEXT_STEPS.md  BATCHING_STATUS.md  BOUNDARY_FIX.md  BUFFER_DUMP_IMPLEMENTATION_COMPLETE.md  BUILD_AND_RUN.bat  BUILD_GUIDE.md  BUILD_TEST_GUIDE.md  BULK_LIGHT_COLOR_CONTROLS_SPEC.md  BVH_POWER_OF_2_BUG_FIX.md  CAMERA_SYSTEM_UPGRADE_PLAN.md  CCHAT_Agent_Reorg_Upgrade_20251017.md  CCHAT_Bug_Recovery_RTXDI_Prep_20251015.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.backup-2025-11-12  CLAUDE_CODE_PLUGINS_GUIDE.md  CLAUDE_MD_UPDATE_SUMMARY.md  CMakeLists.txt  (+284 more)
.claude/: AGENT_MODERNIZATION_SESSION_20251018.md  AGENT_MODERNIZATION_V4_PLAN.md  CONSOLIDATION_COMPLETE.md  MULTI_LIGHT_FIX_AND_DUAL_PATH_PLAN.md  PCSS_STATUS_RTXDI_TRANSITION.md  RTXDI_WEEK1_MILESTONE1_COMPLETE.md  development_philosophy.md  plugin.json  settings.json  settings.local.json.backup
.gemini/: settings.json
PIX/: 0001_volume_rendering_visibility_issue.md  0002_pix_capture_analysis_for_gpt5.md  GPU 2.txt  GPU 6.txt  GPU 8.wpix  GPU_1.wpix  GPU_2.wpix  PIX_AUTOMATION_PROPOSAL_FOR_GPT5.md  PIX_SETUP_AND_CAPTURE_GUIDE_FOR_CLAUDE.md  README.md  pix_analysis_report.md  pix_analysis_report.txt  pix_experiments.txt
Versions/: 20251005-0100_particle_diagonal_fix.patch  20251008-0706_0.0.8_changes.patch  20251008-2341_0.0.9_head.patch  20251008-2349_0.0.9_postfilter_HEAD.patch  20251009-0310_dxr_rt_enhancement_ideas.md  20251009-0310_non_rt_enhancement_ideas.md  20251011-0207_dxr_maximization_report.md  20251011-0315_gaussian_celestial_rt_research.md  20251011-1502_pix_autonomous_agent_architecture.md  20251011-1502_pix_autonomous_agent_runbook.md  20251013-0416_pix_agent_robustness_improvements.md  20251013-0416_pix_autonomous_capture_remediation_plan.md  20251013-0429_pix_agent_overhaul_report.md  20251014-0042_pix_agent_v4_autonomous_capture_and_buffer_analysis_plan.md  20251014-1800_color_banding_16bit_fix.patch  20251015-0100_particle_flashing_fixes.patch  20251015-1200_anthropic_byo_agent_scaffold.patch  20251018-0528_rtxdi_gitignore.patch  20251123-1200_fix_regression_thresholds.patch
agents/: AGENT_MCP_TOOL_SPECS.md  AGENT_SDK_MIGRATION_ROADMAP.md  ML_VISUAL_ANALYSIS_DESIGN.md  VISUAL_FEEDBACK_IMPLEMENTATION.md  WORKFLOW_IMPROVEMENTS_ROADMAP.md
bipolar_nebula_out/: GPT-5-2_BipolarNebula.blend
build-vs2022/: CMakeCache.txt
configs/: README.md  ga_rank1.json  ga_rank2.json  ga_rank3.json
docs/: 4_INSTANCE_WORKFLOW_GUIDE.md  AGENT_ARCHITECTURE_SPECIFICATION.md  AGENT_HIERARCHY_AND_ROLES.md  AGENT_ORCHESTRATION_OPTIMIZATION.md  AI_CONSULTATION_PROMPT_LIGHT_SCATTERING.md  ANTHROPIC_AGENT_BEST_PRACTICES_2025.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_REDESIGN.md  ASSET_PIPELINE_STATUS.md  AUTONOMOUS_MULTI_AGENT_RAG_GUIDE.md  BLENDER_PLASMADX_WORKFLOW_SPEC.md  BLENDER_SESSION_CONTEXT.md  BLENDER_VDB_WORKFLOW_PLAN.md  BUFFER_DUMPING_MODERNIZATION.md  BUFFER_DUMP_DLSS_ISSUE_2025-11-15.md  CELESTIAL_AGENT_ECOSYSTEM_PLAN.md  CELESTIAL_RAG_IMPLEMENTATION_ROADMAP.md  CLAUDE_ARCHITECTURE_ANALYSIS.md  CLAUDE_SESSION_PROMPT.md  CONFIG_LIGHTING_IMPLEMENTATION.md  CONFIG_LOADER_FIX.md  CONFIG_SYSTEM_CLEANUP.md  CONFIG_SYSTEM_MODERNIZATION.md  DEEP_ANALYSIS_PROMPT_FOR_LLM.md  DESCRIPTOR_HEAP_POOL_IMPLEMENTATION.md  DLSS_DIAGNOSIS.md  DLSS_SR_BREAKAGE_2025-11-14.md  ENHANCED_EVALUATION_SYSTEM.md  FROXEL_FIX_SUMMARY.md  FROXEL_FIX_SUMMARY_20251123.md  FROXEL_IMPLEMENTATION_20251121.md  FROXEL_INTEGRATION_STATUS_20251121.md  FROXEL_SYSTEM_STATUS_20251121.md  LIGHT_SCATTERING_TECHNIQUE_PROPOSALS.md  LIGHT_SCATTERING_UPGRADE_20251120.md  LUMINOUS_STARS_SESSION_SUMMARY.md  ML_PHYSICS_OPTIMIZATION_ROADMAP.md  ML_PHYSICS_OPTIMIZATION_SPEC.md  ML_VISION_EVALUATION_CHALLENGES.md  MULTI_AGENT_PYRO_PLANNING_EXERCISE.md  (+24 more)
drop/: log.txt  open_worktrees.bat  open_worktrees.ps1  setup_ssh_key.bat
gpt52_supergiant_star_out/: GPT-5-2_SupergiantStar.blend
misc/: cursor_configure_and_understand_tmux.md  cursor_optimize_multi_pc_ai_setup_with.md  tmux_worktrees_setup.md
ml/: IMPLEMENTATION_SUMMARY.md  PINN_README.md  QUICK_START.md  README.md  README_ML_SYSTEMS.md  collect_physics_data.py  diagnose_pinn.py  generate_ideal_physics_data.py  generate_ideal_physics_data_v2.py  generate_training_data.py  generate_turbulent_physics_data.py  pinn_accretion_disk.py  pinn_v4_with_turbulence.py  requirements.txt  requirements_optimization.txt  requirements_pinn.txt  setup.bat  setup.sh  test_model.py  test_pinn.py  train_adaptive_quality.py  train_pinn_v2.py  training_log_v3.txt  validate_onnx_model.py
optimization/: FRUSTUM_CULLING_IMPLEMENTATION.md  IMPLEMENTED_2025-12-08.md  OPTIMIZATION_ACTION_PLAN.md  OPTIMIZATION_ROADMAP.txt  README.md  frustum_culling_benchmark.py  multi_agent_optimizer.py  performance_dashboard.py
plans/: fix-blender5-nanovdb-visibility.md  fix-nanovdb-animation-density-sampling.md  fix-nanovdb-volumetric-asset-issues.md  luminous-star-particles-completion.md
roadmap/: ENHANCEMENT_PRIORITY_DXR11.md  GAUSSIAN_INTEGRATION_STATUS.md  GAUSSIAN_RENDERER_SUCCESS.md  GPT5_NON_RT_CONSULTATION_PROMPT.md  GPT5_RT_CONSULTATION_PROMPT.md  PARTICLE_RT_LIGHTING_FIXES.md  README.md  RT_ENHANCEMENTS_GUIDE.md  SESSION_SUMMARY_2025-10-09.md  VOLUMETRIC_RT_FIXES_SUMMARY.md
scripts/: b2_shutdown.sh  b2_startup.sh  blender_export_nvdb.py  blender_vdb_to_nvdb.py  cleanup_project.sh  convert_vdb_cli.py  convert_vdb_to_nvdb.py  create_shared_docs_links.bat  export_nvdb.sh  fix_main_deps.bat  (+5 more)
(+976 files in other folders)
